--- a/env-files/dev.env
+++ b/env-files/dev.env
@@ -2,9 +2,11 @@ ENV="dev"
 PORT=5000
 SECRETKEY="QAZXSWEDCVFRTGBNHYUJMKIOLP9632587410"
 VERSION="1.0.0/DEV"
-APPNAME="UgnaCab"
+APPNAME="DHUDU"
 BASEURL="http://localhost"
 WEBURL="http://localhost:5000"
 DBURI="mongodb://127.0.0.1:27017/dhudu"
 
+EMAIL="dhudu167@gmail.com"
+PASSWORD="xdxvclsnuoyvwwdk"
 
