--- a/env-files/dev.env
+++ b/env-files/dev.env
@@ -5,7 +5,7 @@ VERSION="1.0.0/DEV"
 APPNAME="DHUDU"
 BASEURL="http://localhost"
 WEBURL="http://localhost:5000"
-DBURI="mongodb://127.0.0.1:27017/dhudu"
+DBURI="mongodb+srv://dhudu167:XmYNFStgNKC5xGtd@cluster0.k9a4yrt.mongodb.net/dhudu"
 
 EMAIL="dhudu167@gmail.com"
 PASSWORD="xdxvclsnuoyvwwdk"
