--- a/env-files/dev.env
+++ b/env-files/dev.env
@@ -10,4 +10,6 @@ DBURI="mongodb+srv://dhudu167:12345Dudhu@cluster0.k9a4yrt.mongodb.net/dhudu"
 EMAIL="dhudu167@gmail.com"
 PASSWORD="xdxvclsnuoyvwwdk"
 
+DHUDUSERVERKEYNOTIFICATION="AAAAyilIGXo:APA91bEyQSr6oTApmJDRB2kXL-NBxKIC7e3yQfH7PNRYozkqAy44FXVAU-h6COxCN9WU6eTMxZZbCHdRAh7H5uYOTJ7w6IhSLXbDao0c8O-yMj3C73tQP_t_ulrsB2MYp5TtfnG2qW3V"
+
 
