changes in notification and user, guest api chnged

--- a/env-files/dev.env
+++ b/env-files/dev.env
@@ -11,5 +11,5 @@ EMAIL="dhudu167@gmail.com"
 PASSWORD="xdxvclsnuoyvwwdk"
 
 DHUDUSERVERKEYNOTIFICATION="AAAAyilIGXo:APA91bEyQSr6oTApmJDRB2kXL-NBxKIC7e3yQfH7PNRYozkqAy44FXVAU-h6COxCN9WU6eTMxZZbCHdRAh7H5uYOTJ7w6IhSLXbDao0c8O-yMj3C73tQP_t_ulrsB2MYp5TtfnG2qW3V"
-
+GOOGLEAPIKEY="AIzaSyAsIZSHIrt7DuiALc6FbfvzKypr-v4QqeA"
 
