--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase-admin": "^12.0.0",
+    "googleapis": "^131.0.0",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "mongoose": "^7.4.3",
