--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www",
-    "start_nodemon": "nodemon ./bin/www"
+    "start": "SET NODE_ENV=dev&node ./bin/www",
+    "start_nodemon": "SET NODE_ENV=dev&nodemon ./bin/www"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase-admin": "^12.0.0",
@@ -25,6 +25,7 @@
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "node-geocoder": "^4.2.0"
   }
 }
