changes in config

--- a/configs/config.json
+++ b/configs/config.json
@@ -38,11 +38,19 @@
     "matchPasswordFail": "Old Password does not match",
     "registerSuccess": "User registration successful.",
     "registerFail": "Already registered with same number or email.",
+    "userUpdateSuccess": "User updated successfully.",
     "getUserDetailsSuccess": "User Details Successfully.",
     "getUserDetailsFail": "User Details Failed.",
     "getDetailsSuccess": "Get Details Successfully.",
+    "getUserProfileSuccess": "Get User Profiles Successfully.",
     "userDelete": "User deleted Successfully.",
     "getDetailsFail": "Get Detail Details Failed.",
+    "addAddressSucess": "Address added Successfully.",
+    "getAddressDetailsSuccess": "Address Details Successfully.",
+    "getAddressDetailsFail": "Address Details Failed.",
+    "updateAddressSucess": "Address updated Successfully.",
+    "deleteAddressSucess": "Address deleted Successfully.",
+    "addressNotFound": "Address not found.",
     "addSupportTypeSuccess": "Support ticket Successfully.",
     "addSupportTypeFail": "Support ticket Failed.",
     "notificationListFail": "Notification List Failed.",
