changes in config and create trialusers model,controller,routes

--- a/configs/config.json
+++ b/configs/config.json
@@ -79,7 +79,10 @@
     "subscriptionPlanInactive": "Subscription plan inactive or not found.",
     "subscriptionPlanDelete": "Subscription plan deleted Successfully.",
     "brandalreadyadded": "Brand already added. Please try another name.",
+    "trialusersalreadyadded": "Trial Users already added. Please try again.",
+    "alltrialuserslistAdmin": "Get trialUsersList by_Admin Successfully.",
     "brandadded": "Brand added Successfully.",
+    "trialusersadded": "TrialUsers added Successfully.",
     "brandUpdated": "Brand updated Successfully.",
     "getBrandSuccess": "Get brand list Successfully.",
     "brandInactive": "Brand inactive or not found.",
