added location module and recaptcha

--- a/env-files/.env.dev
+++ b/env-files/.env.dev
@@ -11,3 +11,7 @@ PASSWORD="xdxvclsnuoyvwwdk"
 GOOGLEMAPAPIKEY="AIzaSyBWSQCQAO2aWZ66p8hKe1NSiGKljYN7JF8"
 DHUDUSERVERKEYNOTIFICATION="AAAAyilIGXo:APA91bEyQSr6oTApmJDRB2kXL-NBxKIC7e3yQfH7PNRYozkqAy44FXVAU-h6COxCN9WU6eTMxZZbCHdRAh7H5uYOTJ7w6IhSLXbDao0c8O-yMj3C73tQP_t_ulrsB2MYp5TtfnG2qW3V"
 GOOGLEAPIKEY="AIzaSyAsIZSHIrt7DuiALc6FbfvzKypr-v4QqeA"
+
+# reCAPTCHA
+SITEKEY="6LeIz4EpAAAAADIWmRAuskLVQZY2k_ht5BqY1IMW"
+SECRATKEY="6LeIz4EpAAAAAOCJ_Nkzhjx-BarcxmoozObxe-RA"
