changes in create models,controllers,router of productcheckout and product order and changes in app.js,modelConstants,modelBootstrap

--- a/configs/config.json
+++ b/configs/config.json
@@ -58,6 +58,7 @@
     "membershipListFail": "Membership List Failed.",
     "blocked": "Your account has been blocked by admin",
     "categoryalreadyadded": "Category already added. Please try another name.",
+    "addressalreadyadded": "Address already added. Please try another name.",
     "categoryadded": "Category added Successfully.",
     "categoryUpdated": "Category updated Successfully.",
     "categoryInactive": "Category inactive or not found.",
@@ -79,19 +80,25 @@
     "subscriptionPlanInactive": "Subscription plan inactive or not found.",
     "subscriptionPlanDelete": "Subscription plan deleted Successfully.",
     "brandalreadyadded": "Brand already added. Please try another name.",
+    "locationalreadyadded": "Location already added. Please try another location.",
     "trialusersalreadyadded": "Trial Users already added. Please try again.",
     "alltrialuserslistAdmin": "Get trialUsersList by_Admin Successfully.",
     "brandadded": "Brand added Successfully.",
+    "locationadded": "Location added Successfully.",
     "trialusersadded": "TrialUsers added Successfully.",
     "brandUpdated": "Brand updated Successfully.",
+    "locationUpdated": "Location updated Successfully.",
     "getBrandSuccess": "Get brand list Successfully.",
+    "getLocationSuccess": "Get location list Successfully.",
     "brandInactive": "Brand inactive or not found.",
     "brandDelete": "Brand deleted Successfully.",
+    "locationDelete": "Location deleted Successfully.",
     "modelalreadyadded": "Model already added. Please try another name.",
     "modeladded": "Model added Successfully.",
     "getModelSuccess": "Get model list Successfully.",
     "modelUpdated": "Model updated Successfully.",
-    "modelDelete": "Model deleted Successfully."
+    "modelDelete": "Model deleted Successfully.",
+    "deliveryRangeNotFound":"We are not provide these location,please contact other delivery partners"
   },
   "responseCode": {
     "success": 200,
