--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "node-geocoder": "^4.2.0",
+    "nodemailer": "^6.9.11",
     "uuid": "^9.0.1"
   }
 }
