changes in trail user

--- a/env-files/.env.dev
+++ b/env-files/.env.dev
@@ -22,7 +22,7 @@ SMTP_HOST="smtp.gmail.com"
 
 SMTP_PORT=465
 
-SMTP_MAIL="xaltam.test@gmail.com"
-SMTP_PASSWORD="rwtwsrxpfvbwxmle"   
 
-   
+# SMTP_MAIL="xaltam.test@gmail.com"
+# SMTP_PASSWORD="rwtwsrxpfvbwxmle"   
+
