--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase-admin": "^12.0.0",
+    "fs": "^0.0.1-security",
     "googleapis": "^131.0.0",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.30.1",
@@ -31,6 +32,7 @@
     "node-cron": "^3.0.2",
     "node-geocoder": "^4.2.0",
     "nodemailer": "^6.9.11",
+    "path": "^0.12.7",
     "uuid": "^9.0.1"
   }
 }
