changes in catsubcat

--- a/configs/config.json
+++ b/configs/config.json
@@ -57,14 +57,19 @@
     "membershipListSuccess": "Membership List Successfully.",
     "membershipListFail": "Membership List Failed.",
     "blocked": "Your account has been blocked by admin",
-    "categoryalreadyadded": "Category already added. Please try another name.",
     "addressalreadyadded": "Address already added. Please try another name.",
+    "categoryalreadyadded": "Category already added. Please try another name.",
+    "allcategorylistAdmin": "Get categoryList by_Admin Successfully.",
+    "allcategorylistUser": "Get categoryList by_User Successfully.",
     "categoryadded": "Category added Successfully.",
     "categoryUpdated": "Category updated Successfully.",
     "categoryInactive": "Category inactive or not found.",
     "categoryDelete": "Category deleted Successfully.",
     "Subcategoryalreadyadded": "subCategory already added. Please try another name.",
     "Subcategoryadded": "subCategory added Successfully.",
+    "allSubcategorylistAdmin": "Get subcategoryList by_Admin Successfully.",
+    "SubcategoryInactive": "Subcategory inactive or not found.",
+    "allSubcategorylistUser": "Get subcategoryList by_User Successfully.",
     "SubcategoryUpdated": "subCategory updated Successfully.",
     "SubcategoryDelete": "subCategory deleted Successfully.",
     "Productalreadyadded": "Product already added. Please try another name.",
