changes in payment api

--- a/env-files/.env.dev
+++ b/env-files/.env.dev
@@ -22,7 +22,8 @@ SMTP_HOST="smtp.gmail.com"
 
 SMTP_PORT=465
 
-
+PAYMENTAUTHKEY="LrPG^sZTzW-tn9Cw"
+PAYMENTSTOREID="29830"
 # SMTP_MAIL="xaltam.test@gmail.com"
 # SMTP_PASSWORD="rwtwsrxpfvbwxmle"   
 
