change in productCheckout_C.js finallly

--- a/configs/config.json
+++ b/configs/config.json
@@ -78,12 +78,20 @@
     "getProductSuccess": "Get product list Successfully.",
     "ProductNotfound": "Product notFound Successfully.",
     "ProductDelete": "Product deleted Successfully.",
+    "subscriptionPlanNotfound": "subscriptionPlan notFound Successfully.",
     "subscriptionPlanalreadyadded": "Subscription plan already added. Please try another name.",
     "subscriptionPlanadded": "Subscription plan added Successfully.",
     "subscriptionPlanUpdated": "Subscription plan updated Successfully.",
     "subscriptionPlanList": "Subscription plan list Successfully.",
     "subscriptionPlanInactive": "Subscription plan inactive or not found.",
     "subscriptionPlanDelete": "Subscription plan deleted Successfully.",
+    "subscriptionNotfound": "subscriptionPlan notFound Successfully.",
+    "subscriptionalreadyadded": "Subscription already added. Please try another name.",
+    "subscriptionadded": "Subscription added Successfully.",
+    "subscriptionUpdated": "Subscription updated Successfully.",
+    "subscriptionList": "Subscription list Successfully.",
+    "subscriptionInactive": "Subscription inactive or not found.",
+    "subscriptionDelete": "Subscription deleted Successfully.",
     "brandalreadyadded": "Brand already added. Please try another name.",
     "locationalreadyadded": "Location already added. Please try another location.",
     "trialusersalreadyadded": "Trial Users already added. Please try again.",
