change in productCheckout_C.js userSubscription and subscriptionPlan

--- a/configs/config.json
+++ b/configs/config.json
@@ -89,7 +89,8 @@
     "subscriptionalreadyadded": "Subscription already added. Please try another name.",
     "subscriptionadded": "Subscription added Successfully.",
     "subscriptionUpdated": "Subscription updated Successfully.",
-    "subscriptionList": "Subscription list Successfully.",
+    "subscriptionListFront": "Subscription list Successfully.",
+    "subscriptionListAdmin": "Subscription list for Admin Successfully.",
     "subscriptionInactive": "Subscription inactive or not found.",
     "subscriptionDelete": "Subscription deleted Successfully.",
     "brandalreadyadded": "Brand already added. Please try another name.",
