change in many Files and some deleted

--- a/configs/config.json
+++ b/configs/config.json
@@ -113,7 +113,8 @@
     "modelUpdated": "Model updated Successfully.",
     "modelDelete": "Model deleted Successfully.",
     "deliveryRangeNotFound":"We are not provide these location,please contact other delivery partners",
-    "CheckOutadded": "CheckOut added Successfully.",
+    "ProductCheckOutadded": "ProductCheckOut added Successfully.",
+    "SubscriptionCheckOutadded": "SubscriptionCheckOut added Successfully.",
     "Cartalreadyadded": "Cart already added. Please try another name.",
     "Cartadded": "Cart added Successfully.",
     "CartUpdated": "Cart updated Successfully.",
