change in many Files and some deleted and subscription

--- a/configs/config.json
+++ b/configs/config.json
@@ -86,7 +86,7 @@
     "subscriptionPlanInactive": "Subscription plan inactive or not found.",
     "subscriptionPlanDelete": "Subscription plan deleted Successfully.",
     "subscriptionNotfound": "subscription notFound Successfully.",
-    "subscriptionalreadyadded": "Subscription already added. Please try another name.",
+    "subscriptionalreadyadded": "You have already taken Subscription for this Product. Please try another Product.",
     "subscriptionadded": "Subscription added Successfully.",
     "subscriptionUpdated": "Subscription updated Successfully.",
     "subscriptionListFront": "Subscription list Successfully.",
@@ -114,6 +114,7 @@
     "modelDelete": "Model deleted Successfully.",
     "deliveryRangeNotFound":"We are not provide these location,please contact other delivery partners",
     "ProductCheckOutadded": "ProductCheckOut added Successfully.",
+    "ProductCheckOutNotfound": "ProductCheckOut notFound Successfully.",
     "SubscriptionCheckOutadded": "SubscriptionCheckOut added Successfully.",
     "Cartalreadyadded": "Cart already added. Please try another name.",
     "Cartadded": "Cart added Successfully.",
