--- a/configs/config.json
+++ b/configs/config.json
@@ -116,6 +116,7 @@
     "ProductCheckOutadded": "ProductCheckOut added Successfully.",
     "ProductCheckOutNotfound": "ProductCheckOut notFound Successfully.",
     "SubscriptionCheckOutadded": "SubscriptionCheckOut added Successfully.",
+    "SubscriptionCheckOutNotFound": "SubscriptionCheckOut notFound Successfully.",
     "Cartalreadyadded": "Cart already added. Please try another name.",
     "Cartadded": "Cart added Successfully.",
     "CartUpdated": "Cart updated Successfully.",
@@ -129,7 +130,14 @@
     "getOrderByUser": "Get Order list Successfully.",
     "OrderNotfound": "Order notFound Successfully.",
     "OrderDelete": "Order deleted Successfully.",
-    "allOrderlistAdmin": "Get OrderList by_Admin Successfully."
+    "allOrderlistAdmin": "Get OrderList by_Admin Successfully.",
+    "Driveralreadyadded": "Driver already added.",
+    "DriverNotfound": "Driver notFound Successfully.",
+    "driverBankDetailsNotfound": "driverBan notFound Successfully.",
+    "driverAddressNotfound": "driverAddress notFound Successfully.",
+    "DriverDocNotfound": "DriverDoc notFound Successfully.",
+    "BikeDetailsNotfound": "BikeDetails notFound Successfully.",
+    "BikeDetailsalreadyAdded": "BikeDetails already added Successfully."
   },
   "responseCode": {
     "success": 200,
