--- a/configs/config.json
+++ b/configs/config.json
@@ -109,6 +109,7 @@
     "locationDelete": "Location deleted Successfully.",
     "modelalreadyadded": "Model already added. Please try another name.",
     "modeladded": "Model added Successfully.",
+    "modelInactive": "Model inactive or not found.",
     "getModelSuccess": "Get model list Successfully.",
     "modelUpdated": "Model updated Successfully.",
     "modelDelete": "Model deleted Successfully.",
@@ -132,12 +133,22 @@
     "OrderDelete": "Order deleted Successfully.",
     "allOrderlistAdmin": "Get OrderList by_Admin Successfully.",
     "Driveralreadyadded": "Driver already added.",
+    "DriverDetailsAdded": "DriverDetails added Successfully.",
+    "DriverDetailsDeleted": "DriverDetails deleted Successfully.",
+    "DriverDetailsUpdated": "DriverDetails updated Successfully.",
     "DriverNotfound": "Driver notFound Successfully.",
-    "driverBankDetailsNotfound": "driverBan notFound Successfully.",
+    "driverBankDetailsNotfound": "driverBank notFound Successfully.",
     "driverAddressNotfound": "driverAddress notFound Successfully.",
     "DriverDocNotfound": "DriverDoc notFound Successfully.",
     "BikeDetailsNotfound": "BikeDetails notFound Successfully.",
-    "BikeDetailsalreadyAdded": "BikeDetails already added Successfully."
+    "BikeDetailsalreadyAdded": "BikeDetails already added Successfully.",
+    "DriverNotAdded": "Failed to create driver.",
+    "AddressNotAdded": "Failed to create Address for driver.",
+    "BankDetailsNotAdded": "Failed to create BankDetails of driver.",
+    "DocNotAdded": "Failed to create Doc of driver.",
+    "vehicleNotAdded": "Failed to create Vehicle for driver.",
+    "RequiredFilesMissing": "required all fields."
+
   },
   "responseCode": {
     "success": 200,
