--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase-admin": "^12.0.0",
     "fs": "^0.0.1-security",
     "googleapis": "^131.0.0",
+    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.30.1",
     "mongoose": "^7.4.3",
