change in working  model of  Assign truck model

--- a/configs/config.json
+++ b/configs/config.json
@@ -58,57 +58,57 @@
     "membershipListSuccess": "Membership List Successfully.",
     "membershipListFail": "Membership List Failed.",
     "blocked": "Your account has been blocked by admin",
+    "categoryadded": "Category added Successfully.",
     "categoryalreadyadded": "Category already added. Please try another name.",
     "allcategorylistAdmin": "Get categoryList by_Admin Successfully.",
     "allcategorylistUser": "Get categoryList by_User Successfully.",
-    "categoryadded": "Category added Successfully.",
     "categoryUpdated": "Category updated Successfully.",
     "categoryInactive": "Category inactive or not found.",
     "categoryDelete": "Category deleted Successfully.",
-    "Subcategoryalreadyadded": "subCategory already added. Please try another name.",
     "Subcategoryadded": "subCategory added Successfully.",
+    "Subcategoryalreadyadded": "subCategory already added. Please try another name.",
     "allSubcategorylistAdmin": "Get subcategoryList by_Admin Successfully.",
     "SubcategoryInactive": "Subcategory inactive or not found.",
     "allSubcategorylistUser": "Get subcategoryList by_User Successfully.",
     "SubcategoryUpdated": "subCategory updated Successfully.",
     "SubcategoryDelete": "subCategory deleted Successfully.",
-    "Productalreadyadded": "Product already added. Please try another name.",
     "Productadded": "Product added Successfully.",
+    "Productalreadyadded": "Product already added. Please try another name.",
     "ProductUpdated": "Product updated Successfully.",
     "getProductSuccess": "Get product list Successfully.",
     "ProductNotfound": "Product notFound Successfully.",
     "ProductDelete": "Product deleted Successfully.",
-    "subscriptionPlanNotfound": "subscriptionPlan notFound Successfully.",
-    "subscriptionPlanalreadyadded": "Subscription plan already added. Please try another name.",
     "subscriptionPlanadded": "Subscription plan added Successfully.",
+    "subscriptionPlanalreadyadded": "Subscription plan already added. Please try another name.",
+    "subscriptionPlanNotfound": "subscriptionPlan notFound Successfully.",
     "subscriptionPlanUpdated": "Subscription plan updated Successfully.",
     "subscriptionPlanList": "Subscription plan list Successfully.",
     "subscriptionPlanInactive": "Subscription plan inactive or not found.",
     "subscriptionPlanDelete": "Subscription plan deleted Successfully.",
-    "subscriptionNotfound": "subscription notFound Successfully.",
-    "subscriptionalreadyadded": "You have already taken Subscription for this Product. Please try another Product.",
     "subscriptionadded": "Subscription added Successfully.",
+    "subscriptionalreadyadded": "You have already taken Subscription for this Product. Please try another Product.",
+    "subscriptionNotfound": "subscription notFound Successfully.",
     "subscriptionUpdated": "Subscription updated Successfully.",
     "subscriptionListFront": "Subscription list Successfully.",
     "subscriptionListAdmin": "Subscription list for Admin Successfully.",
     "subscriptionInactive": "Subscription inactive or not found.",
     "subscriptionDelete": "Subscription deleted Successfully.",
-    "brandalreadyadded": "Brand already added. Please try another name.",
-    "locationalreadyadded": "Location already added. Please try another location.",
+    "trialusersadded": "TrialUsers added Successfully.",
     "trialusersalreadyadded": "Trial Users already added. Please try again.",
     "alltrialuserslistAdmin": "Get trialUsersList by_Admin Successfully.",
-    "brandadded": "Brand added Successfully.",
     "locationadded": "Location added Successfully.",
-    "trialusersadded": "TrialUsers added Successfully.",
-    "brandUpdated": "Brand updated Successfully.",
+    "locationalreadyadded": "Location already added. Please try another location.",
     "locationUpdated": "Location updated Successfully.",
-    "getBrandSuccess": "Get brand list Successfully.",
+    "locationDelete": "Location deleted Successfully.",
     "getLocationSuccess": "Get location list Successfully.",
+    "brandadded": "Brand added Successfully.",
+    "brandalreadyadded": "Brand already added. Please try another name.",
+    "brandUpdated": "Brand updated Successfully.",
+    "getBrandSuccess": "Get brand list Successfully.",
     "brandInactive": "Brand inactive or not found.",
     "brandDelete": "Brand deleted Successfully.",
-    "locationDelete": "Location deleted Successfully.",
-    "modelalreadyadded": "Model already added. Please try another name.",
     "modeladded": "Model added Successfully.",
+    "modelalreadyadded": "Model already added. Please try another name.",
     "modelInactive": "Model inactive or not found.",
     "getModelSuccess": "Get model list Successfully.",
     "modelUpdated": "Model updated Successfully.",
@@ -118,15 +118,15 @@
     "ProductCheckOutNotfound": "ProductCheckOut notFound Successfully.",
     "SubscriptionCheckOutadded": "SubscriptionCheckOut added Successfully.",
     "SubscriptionCheckOutNotFound": "SubscriptionCheckOut notFound Successfully.",
-    "Cartalreadyadded": "Cart already added. Please try another name.",
     "Cartadded": "Cart added Successfully.",
+    "Cartalreadyadded": "Cart already added. Please try another name.",
     "CartUpdated": "Cart updated Successfully.",
     "getCartByUser": "Get Cart list Successfully.",
     "CartNotfound": "Cart notFound Successfully.",
     "CartDelete": "Cart deleted Successfully.",
-    "allCartlistAdmin": "Get CartList by_Admin Successfully.",
-    "Orderalreadyadded": "Order already added. Please try another name.",
     "Orderadded": "Order added Successfully.",
+    "Orderalreadyadded": "Order already added. Please try another name.",
+    "allCartlistAdmin": "Get CartList by_Admin Successfully.",
     "OrderUpdated": "Order updated Successfully.",
     "getOrderByUser": "Get Order list Successfully.",
     "OrderNotfound": "Order notFound Successfully.",
@@ -149,7 +149,26 @@
     "vehicleNotAdded": "Failed to create Vehicle for driver.",
     "RequiredFilesMissing": "required all fields.",
     "VehicleImageRequired": "Plesae enter vehicle Image.",
-    "ImageRequired": "Plesae enter all Image."
+    "ImageRequired": "Plesae enter all Image.",
+    "truckDriveradded": "Truck Driver added Successfully.",
+    "truckDriveralreadyadded": "You have already added Truck Driver. Please try another Truck Driver.",
+    "truckDriverNotfound": "Truck Driver notFound Successfully.",
+    "truckDriverUpdated": "Truck Driver updated Successfully.",
+    "truckDriverListFront": "Truck Driver list Successfully.",
+    "truckDriverListAdmin": "Truck Driver list for Admin Successfully.",
+    "truckDriverInactive": "Truck Driver inactive or not found.",
+    "truckDriverDelete": "Truck Driver deleted Successfully.",
+    "truckdriverloginSuccess": "Truck Driver Login successfully.",
+    "getTruckDriverDetailsFail": "Truck Driver Details Failed.",
+    "getTruckDriverDetailsSuccess": "Truck Driver Details Success.",
+    "truckDetailsadded": "Truck Details added Successfully.",
+    "truckDetailsalreadyadded": "You have already added Truck Details. Please try another Truck Details.",
+    "truckDetailsNotfound": "Truck Details notFound Successfully.",
+    "truckDetailsUpdated": "Truck Details updated Successfully.",
+    "truckDetailsListFront": "Truck Details list Successfully.",
+    "truckDetailsListAdmin": "Truck Details list for Admin Successfully.",
+    "truckDetailsInactive": "Truck Details inactive or not found.",
+    "truckDetailsDelete": "Truck Details deleted Successfully."
 
   },
   "responseCode": {
