change in working  model of   fix vat

--- a/configs/config.json
+++ b/configs/config.json
@@ -118,6 +118,12 @@
     "ProductCheckOutNotfound": "ProductCheckOut notFound Successfully.",
     "SubscriptionCheckOutadded": "SubscriptionCheckOut added Successfully.",
     "SubscriptionCheckOutNotFound": "SubscriptionCheckOut notFound Successfully.",
+    "Vatadded": "Cart added Successfully.",
+    "Vatalreadyadded": "Cart already added. Please try another name.",
+    "VatUpdated": "Cart updated Successfully.",
+    "getVatByUser": "Get Cart list Successfully.",
+    "VatNotfound": "Cart notFound Successfully.",
+    "VatDelete": "Cart deleted Successfully.",
     "Cartadded": "Cart added Successfully.",
     "Cartalreadyadded": "Cart already added. Please try another name.",
     "CartUpdated": "Cart updated Successfully.",
