change in working  model of  fix vat and config

--- a/configs/config.json
+++ b/configs/config.json
@@ -118,12 +118,13 @@
     "ProductCheckOutNotfound": "ProductCheckOut notFound Successfully.",
     "SubscriptionCheckOutadded": "SubscriptionCheckOut added Successfully.",
     "SubscriptionCheckOutNotFound": "SubscriptionCheckOut notFound Successfully.",
-    "Vatadded": "Cart added Successfully.",
-    "Vatalreadyadded": "Cart already added. Please try another name.",
-    "VatUpdated": "Cart updated Successfully.",
-    "getVatByUser": "Get Cart list Successfully.",
-    "VatNotfound": "Cart notFound Successfully.",
-    "VatDelete": "Cart deleted Successfully.",
+    "Vatadded": "Vat added Successfully.",
+    "Vatalreadyadded": "Vat already added. Please try another name.",
+    "VatUpdated": "Vat updated Successfully.",
+    "getVatByUser": "Get Vat Successfully.",
+    "getVatByAdmin": "Get Vat By Admin Successfully.",
+    "VatNotfound": "Vat notFound Successfully.",
+    "VatDelete": "Vat deleted Successfully.",
     "Cartadded": "Cart added Successfully.",
     "Cartalreadyadded": "Cart already added. Please try another name.",
     "CartUpdated": "Cart updated Successfully.",
