change in working model assign bikedriver

--- a/configs/config.json
+++ b/configs/config.json
@@ -151,8 +151,10 @@
     "DriverDetailsDeleted": "DriverDetails deleted Successfully.",
     "DriverDetailsUpdated": "DriverDetails updated Successfully.",
     "DriverNotfound": "Driver notFound Successfully.",
+    "DriverInactive": "Driver Inactive or notFound Successfully.",
     "driverBankDetailsNotfound": "driverBank notFound Successfully.",
     "driverAddressNotfound": "driverAddress notFound Successfully.",
+    "driverAddressInactive": "driverAddress notFound or Inactive Successfully.",
     "DriverDocNotfound": "DriverDoc notFound Successfully.",
     "BikeDetailsNotfound": "BikeDetails notFound Successfully.",
     "BikeDetailsalreadyAdded": "BikeDetails already added Successfully.",
